--- a/freemarker-patched/pom.xml
+++ b/freemarker-patched/pom.xml
@@ -3,16 +3,16 @@
  <modelVersion>4.0.0</modelVersion>
 
  <artifactId>be5-freemarker-patched</artifactId>
- <version>2.3.20p3</version>
+ <version>2.3.20p4-SNAPSHOT</version>
  <packaging>jar</packaging>
 
  <name>be5 Patched Freemarker</name>
  <description>Freemarker with DOTE-specific patches</description>
 
  <parent>
-  <groupId>com.developmentontheedge</groupId>
+  <groupId>com.developmentontheedge.be5</groupId>
   <artifactId>be5</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
  </parent>
 
  <dependencies>
