--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -10,7 +10,7 @@
 	<description>Maven plug-ins for be5</description>
 
   <parent>
-    <groupId>com.developmentontheedge</groupId>
+    <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5</artifactId>
     <version>0.0.3-SNAPSHOT</version>
   </parent>
@@ -31,13 +31,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-dbms</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-metadata</artifactId>
 			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
