--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -10,7 +10,7 @@
 	<description>Define project models, read/write it to json, synchronize db structure.</description>
 
 	<parent>
-		<groupId>com.developmentontheedge</groupId>
+		<groupId>com.developmentontheedge.be5</groupId>
 		<artifactId>be5</artifactId>
 		<version>0.0.3-SNAPSHOT</version>
 	</parent>
@@ -35,21 +35,21 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-dbms</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-sql</artifactId>
-			<version>0.0.27</version>
+			<version>0.0.28-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-freemarker-patched</artifactId>
-			<version>2.3.20p3</version>
+			<version>2.3.20p4-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
