--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,7 @@
 	<description>Core BE 5 server.</description>
 
 	<parent>
-		<groupId>com.developmentontheedge</groupId>
+		<groupId>com.developmentontheedge.be5</groupId>
 		<artifactId>be5</artifactId>
 		<version>0.0.3-SNAPSHOT</version>
 	</parent>
@@ -24,7 +24,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
+			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-metadata</artifactId>
 			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
@@ -114,11 +114,11 @@
 			<version>1.10.19</version>
 		</dependency>
 
-        <dependency>
-            <groupId>com.developmentontheedge.be5</groupId>
-            <artifactId>be5-maven-plugin</artifactId>
-            <version>0.1.0</version>
-        </dependency>
+		<dependency>
+			<groupId>com.developmentontheedge.be5</groupId>
+			<artifactId>be5-maven-plugin</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+		</dependency>
 
     </dependencies>
 	
