--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>com.developmentontheedge.be5</groupId>
 				<artifactId>be5-maven-plugin</artifactId>
-				<version>0.1.0</version>
+				<version>0.1.1-SNAPSHOT</version>
 				<configuration>
 					<projectPath>./</projectPath>
 				</configuration>
