--- a/server/pom.xml
+++ b/server/pom.xml
@@ -135,7 +135,7 @@
 			<plugin>
 				<groupId>com.developmentontheedge.be5</groupId>
 				<artifactId>be5-maven-plugin</artifactId>
-				<version>0.1.0</version>
+				<version>0.1.1-SNAPSHOT</version>
 				<configuration>
 					<projectPath>./src/test/resources/</projectPath>
 					<saveProject>true</saveProject>
