--- a/modules/core/context.yaml
+++ b/modules/core/context.yaml
@@ -5,3 +5,6 @@ context:
   - coreUtils:
       interface:      com.developmentontheedge.be5.api.services.CoreUtils
       implementation: com.developmentontheedge.be5.modules.core.services.CoreUtilsImpl
+  - loginService:
+      interface:      com.developmentontheedge.be5.modules.core.services.LoginService
+      implementation: com.developmentontheedge.be5.modules.core.services.impl.LoginServiceImpl
