--- a/modules/core/context.yaml
+++ b/modules/core/context.yaml
@@ -1,6 +1,7 @@
 context:
   components:
   - userInfo:         com.developmentontheedge.be5.modules.core.components.UserInfoComponent
+  - categories:       com.developmentontheedge.be5.modules.core.components.Categories
   services:
   - coreUtils:
       interface:      com.developmentontheedge.be5.api.services.CoreUtils
@@ -8,3 +9,6 @@ context:
   - loginService:
       interface:      com.developmentontheedge.be5.modules.core.services.LoginService
       implementation: com.developmentontheedge.be5.modules.core.services.impl.LoginServiceImpl
+  - categoriesService:
+      interface:      com.developmentontheedge.be5.modules.core.services.CategoriesService
+      implementation: com.developmentontheedge.be5.modules.core.services.impl.CategoriesServiceImpl
