--- a/modules/core/context.yaml
+++ b/modules/core/context.yaml
@@ -10,5 +10,5 @@ context:
       interface:      com.developmentontheedge.be5.modules.core.services.LoginService
       implementation: com.developmentontheedge.be5.modules.core.services.impl.LoginServiceImpl
   - categoriesService:
-      interface:      com.developmentontheedge.be5.modules.core.services.CategoriesService
+      interface:      com.developmentontheedge.be5.api.services.CategoriesService
       implementation: com.developmentontheedge.be5.modules.core.services.impl.CategoriesServiceImpl
