--- a/modules/core/context.yaml
+++ b/modules/core/context.yaml
@@ -5,7 +5,7 @@ context:
   services:
   - coreUtils:
       interface:      com.developmentontheedge.be5.api.services.CoreUtils
-      implementation: com.developmentontheedge.be5.modules.core.services.CoreUtilsImpl
+      implementation: com.developmentontheedge.be5.modules.core.services.impl.CoreUtilsImpl
   - loginService:
       interface:      com.developmentontheedge.be5.modules.core.services.LoginService
       implementation: com.developmentontheedge.be5.modules.core.services.impl.LoginServiceImpl
