add delete COLLECTION and GENERIC_COLLECTION by TableReference

--- a/modules/core/src/meta/entities/user_prefs.yaml
+++ b/modules/core/src/meta/entities/user_prefs.yaml
@@ -1,11 +1,12 @@
 user_prefs:
-  type: metadata
+  type: collection
   displayName: User Preferences
   primaryKey: dummy
   scheme:
     columns:
     - user_name:
         type: VARCHAR(100)
+        reference: users
     - pref_name:
         type: VARCHAR(30)
     - pref_value:
