add SelectionView for entities and roles #20

--- a/modules/core/src/meta/entities/entities.yaml
+++ b/modules/core/src/meta/entities/entities.yaml
@@ -1,9 +1,9 @@
-roles:
+entities:
   type: metadata
-  displayName: Roles
+  displayName: Entities
   primaryKey: _dummy_
   queries:
   - '*** Selection view ***':
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: roles/SelectionView.groovy
+      file: entities/SelectionView.groovy
