--- a/modules/core/src/meta/entities/user_roles.yaml
+++ b/modules/core/src/meta/entities/user_roles.yaml
@@ -9,6 +9,7 @@ user_roles:
         reference: users
     - role_name:
         type: VARCHAR(100)
+        reference: roles
     indices:
     - IDX_UR_FULL:
         unique: true
