fix logic, add tests

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -9,6 +9,8 @@ testProject:
   - testtableAdmin
   - testtUser
   - testTypes
+  - testCollection
+  - testGenCollection
   - atest
   - meters
   - persons
