add test operationNotAvailableForThisQuery, fix access to query, refactoring, use metadata.model.Project.findOperation()

--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -28,6 +28,8 @@ users:
       - Edit
       - Insert
       - Filter
+      - Login
+      - Logout
       code: |-
         SELECT
           u.user_name AS "___ID",
