fix - add topForm operation to query operations, remove from presentation

--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -45,6 +45,8 @@ testtable:
   - TableWithFilter:
       type: 1D_unknown
       layout: '{"topForm":"FilterByParamsInQueryOperation"}'
+      operations:
+      - FilterByParamsInQueryOperation
       roles: SystemDeveloper
       code: |-
          SELECT 1
