--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <module>sql</module>
   <module>freemarker-patched</module>
   <module>metadata</module>
+  <module>inject</module>
   <module>server</module>
   <module>maven</module>
   <module>entitygen</module>
