--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,16 +29,16 @@
 			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.developmentontheedge.be5</groupId>
+            <artifactId>be5-inject</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans-json</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
 		</dependency>
 
 		<dependency>
