add test for Injector #35

--- a/inject/src/test/resources/context.yaml
+++ b/inject/src/test/resources/context.yaml
@@ -4,6 +4,8 @@ context:
   services:
   - com.developmentontheedge.be5.env.impl.testServices.AService
   - com.developmentontheedge.be5.env.impl.testServices.BService
+  - com.developmentontheedge.be5.env.impl.testServicesProvider.AServiceProvider
+  - com.developmentontheedge.be5.env.impl.testServicesProvider.BServiceProvider
   - com.developmentontheedge.be5.env.services.ConfigurableService
   - testService:
       interface:      com.developmentontheedge.be5.env.services.TestService
