--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,6 +35,12 @@
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.developmentontheedge.be5</groupId>
+            <artifactId>be5-base</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans-json</artifactId>
