--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -64,6 +64,24 @@ testtable:
                </sql>' AS "testtUserValues"
             FROM
               testtable t
+  - TestMultipleColumn:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testtable
+        WHERE 1=1
+          AND name IN <parameter:name multiple="true" refColumn="testtable.name" />
+  - TestMultipleColumnLong:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testtable
+        WHERE 1=1
+          AND ID IN <parameter:ID multiple="true" refColumn="testtable.ID" />
   - TestResolveRefColumn:
       type: 1D_unknown
       invisible: true
