add classPathToFileName() for groovy queries

--- a/modules/core/src/meta/entities/entities.yaml
+++ b/modules/core/src/meta/entities/entities.yaml
@@ -6,4 +6,4 @@ entities:
   - '*** Selection view ***':
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: entities/SelectionView.groovy
+      file: entities.SelectionView.groovy
