--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -9,38 +9,38 @@ _system_:
       roles: [SystemDeveloper, Administrator]
       operations:
       - ReloadProject
-      file: CacheTable.groovy
+      file: system.CacheTable.groovy
   - Entities:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: Entities.groovy
+      file: system.Entities.groovy
   - Queries:
       type: Groovy
       invisible: true
       roles: [SystemDeveloper, Administrator]
-      file: Queries.groovy
+      file: system.Queries.groovy
   - Session variables:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
       operations:
       - SessionVariablesEdit
-      file: SessionVariables.groovy
+      file: system.SessionVariables.groovy
   - Threads:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: Threads.groovy
+      file: system.Threads.groovy
   - System Properties:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: SystemProperties.groovy
+      file: system.SystemProperties.groovy
   - Http Headers:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: HttpHeaders.groovy
+      file: system.HttpHeaders.groovy
   - DataSource:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: DataSource.groovy
+      file: system.DataSource.groovy
   - Query Builder:
       type: static
       roles: [SystemDeveloper]
@@ -50,8 +50,8 @@ _system_:
       type: Groovy
       records: 1
       roles: [SystemDeveloper, Administrator]
-      file: system/SessionVariablesEdit.groovy
+      file: system.SessionVariablesEdit.groovy
   - ReloadProject:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
-      file: system/ReloadProject.groovy
+      file: system.ReloadProject.groovy
