move code to ConnectionService, remove dependences of Be5Exception

--- a/base/context.yaml
+++ b/base/context.yaml
@@ -7,6 +7,9 @@ context:
   - databaseService:
       interface:      com.developmentontheedge.be5.api.services.DatabaseService
       implementation: com.developmentontheedge.be5.api.services.impl.DatabaseServiceImpl
+  - connectionService:
+      interface:      com.developmentontheedge.be5.api.services.ConnectionService
+      implementation: com.developmentontheedge.be5.api.services.impl.ConnectionServiceImpl
   - sqlService:
       interface:      com.developmentontheedge.be5.api.services.SqlService
       implementation: com.developmentontheedge.be5.api.services.impl.SqlServiceImpl
