--- a/base/pom.xml
+++ b/base/pom.xml
@@ -27,14 +27,8 @@
 
         <dependency>
             <groupId>com.developmentontheedge.be5</groupId>
-            <artifactId>be5-metadata</artifactId>
-            <version>0.3.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.developmentontheedge.be5</groupId>
-            <artifactId>be5-inject</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <artifactId>be5-sql</artifactId>
+            <version>0.0.28-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -67,13 +61,6 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.193</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.developmentontheedge.be5</groupId>
-            <artifactId>be5-maven-plugin</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
