--- a/server/context.yaml
+++ b/server/context.yaml
@@ -21,6 +21,18 @@ context:
   - com.developmentontheedge.be5.api.services.Be5Caches
   - com.developmentontheedge.be5.api.services.impl.GroovyOperationLoader
   - com.developmentontheedge.be5.api.services.GroovyRegister
+  - projectProvider:
+      interface:      com.developmentontheedge.be5.api.services.ProjectProvider
+      implementation: com.developmentontheedge.be5.api.services.impl.ProjectProviderImpl
+  - databaseService:
+      interface:      com.developmentontheedge.be5.api.services.DatabaseService
+      implementation: com.developmentontheedge.be5.api.services.impl.DatabaseServiceImpl
+  - connectionService:
+      interface:      com.developmentontheedge.be5.api.services.ConnectionService
+      implementation: com.developmentontheedge.be5.api.services.impl.ConnectionServiceImpl
+  - sqlService:
+      interface:      com.developmentontheedge.be5.api.services.SqlService
+      implementation: com.developmentontheedge.be5.api.services.impl.SqlServiceImpl
   - be5MainSettings:
       interface:      com.developmentontheedge.be5.api.services.Be5MainSettings
       implementation: com.developmentontheedge.be5.api.services.impl.Be5MainSettingsImpl
