--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
  <url>http://developmentontheedge.com/</url>
 
  <modules>
+  <module>database</module>
   <module>dbms</module>
   <module>sql</module>
   <module>freemarker-patched</module>
   <module>metadata</module>
   <module>inject</module>
-  <module>base</module>
   <module>server</module>
   <module>maven</module>
   <module>entitygen</module>
