--- a/server/context.yaml
+++ b/server/context.yaml
@@ -22,6 +22,7 @@ context:
   - com.developmentontheedge.be5.api.services.impl.GroovyOperationLoader
   - com.developmentontheedge.be5.api.services.GroovyRegister
   - com.developmentontheedge.be5.api.services.impl.SqlHelper
+  - com.developmentontheedge.be5.api.helpers.ColumnsHelper
   - projectProvider:
       interface:      com.developmentontheedge.be5.api.services.ProjectProvider
       implementation: com.developmentontheedge.be5.api.services.impl.ProjectProviderImpl
